src/core/Claroline/CoreBundle/Tests/Stub/plugin/Valid/WithThumbnail/ValidWithThumbnail.php
<?php

namespace Valid\WithThumbnail;

use Claroline\CoreBundle\Library\PluginBundle;

class ValidWithThumbnail extends PluginBundle
{
}